@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-08T16:22:57Z",
+  "timestamp" : "2022-09-09T01:53:03Z",
   "count_outdated" : 504,
   "uniques_outdated" : 292,
-  "count" : 530,
+  "count" : 531,
   "uniques" : 307,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
