@@ -1,3 +1,11 @@
+2022-09-09T01:53:03Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3019443688
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 292 504 / 307 530
+* notice: next accum: outdated-unq outdated-all / unq all: 292 504 / 307 531
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-08]
+
 2022-09-08T16:22:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3016679424
 * notice: last 14d: unq all: 5 26
